atualizado com nome